--- a/contact.html
+++ b/contact.html
@@ -10,13 +10,103 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Optional JavaScript; choose one of the two! -->
+
     <title>Coffeehouse-Company</title>
+    <style>
+        @media only screen and (min-width: 992px) {
+            #contactbox {
+                width: 200px;
+                height: 100px;
+            }
+        }
+
+        @media only screen and (min-width: 768px) and (max-width: 991px) {
+            #contactbox {
+                width: 300px;
+                height: 100px;
+            }
+            
+        }
+
+        @media only screen and (max-width: 767px) {
+            #contactbox {
+                width: 200px;
+                height: 100px;
+                
+            }
+            .formitem{
+                width: 50px;
+            }
+        }
+
+        .btn {
+            align-content: center;
+        }
+
+        #contactbox {
+            height: 500px;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            border: 2px solid red;
+            margin: 20px auto;
+            padding: 43px 3px;
+            flex-direction: column;
+            border-radius: 23px;
+            background-color: rgb(43 43 43);
+
+        }
+
+        #contactform {
+            display: flex;
+            flex-direction: column;
+            margin: 23px 12px;
+        }
+
+        .formitem {
+            margin: 5px auto;
+            padding: 5px 2px;
+            width: 551px;
+            text-align: center;
+            border-radius: 30px;
+        }
+
+        .btn {
+            padding: 4px;
+            background-color: rgb(231, 174, 167);
+            cursor: pointer;
+            font-size: 20px;
+            color: white;
+        }
+
+        #contact {
+            width: 100%;
+            height: 100%;
+        }
+
+        #contactbox h1 {
+            color: black;
+        }
+
+        #h-primary center {
+            align-content: center;
+            text-align: center;
+            color: white;
+        }
+
+        /* Footer  */
+        .foot {
+            text-align: center;
+            color: white;
+            background-color: black;
+        }
+    </style>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-         <div class="container-fluid">
-            <a class="navbar-brand" href="/Coffeehouse-company/">Coffeehouse</a>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Coffeehouse</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -25,57 +115,50 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/Coffeehouse-company/index.html">Home</a>
+                        <a class="nav-link " href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Coffeehouse-company/aboutus.html">About Us</a>
+                        <a class="nav-link" href="aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Coffeehouse-company/login.html">Log In</a>
+                        <a class="nav-link" href="login.html">Log In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/Coffeehouse-company/contact.html">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form>
+                <div class="mx-2">
+                    <button class="btn btn-danger">Sign Up</button>
+                </div>
             </div>
         </div>
     </nav>
-
-
-
-
     <div class="container my-4">
-        <h2>Contact Us</h2>
-        <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-              <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+        <section id="contact">
+            <div id="contactbox">
+                <h1 id="h-primary center" style="text-align:center; color:white">Contact Us</h1>
+                <form action="#" id="contactform">
+                    <input type="text" placeholder="Enter your name" class="formitem">
+                    <input type="email" placeholder="Enter your email" class="formitem">
+                    <input type="password" placeholder="Enter your password" class="formitem">
+                    <input type="number" placeholder="Enter your age" class="formitem">
+                    <button class="btn formitem">Submit</button>
+                </form>
             </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1">
-            </div>
-            <div class="mb-3 form-check">
-              <input type="checkbox" class="form-check-input" id="exampleCheck1">
-              <label class="form-check-label" for="exampleCheck1">Check me out</label>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-    </div>
+        </section>
 
-    <footer class="container">
-        <p class="float-end"><a href="#">Back to top</a></p>
-        <p>© 2020–2021 CoffeeCompany, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
-      </footer>
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+        <footer class="container">
+            <p class="float-end"><a href="#">Back to top</a></p>
+            <p>© 2020–2021 CoffeeCompany, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+        </footer>
+        <!-- Option 1: Bootstrap Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
