--- a/contact.html
+++ b/contact.html
@@ -106,7 +106,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Coffeehouse</a>
+            <a class="navbar-brand" href="/Coffeehouse-company/">Coffeehouse</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -115,16 +115,16 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " href="index.html">Home</a>
+                        <a class="nav-link " href="/Coffeehouse-company/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aboutus.html">About Us</a>
+                        <a class="nav-link" href="/Coffeehouse-company/aboutus.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Log In</a>
+                        <a class="nav-link" href="/Coffeehouse-company/login.html">Log In</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="contact.html">Contact Us</a>
+                        <a class="nav-link active" aria-current="page" href="/Coffeehouse-company/contact.html">Contact Us</a>
                     </li>
                 </ul>
                 <form class="d-flex">
